Fix small z-index error

--- a/frontend/src/assets/stylesheets/navbar.scss
+++ b/frontend/src/assets/stylesheets/navbar.scss
@@ -64,7 +64,7 @@
   width: 100%;
   min-height: 60px;
   height: 10vh;
-  z-index: 1;
+  z-index: 2;
 }
 
 #nav h1 {
